...

            if (habitResult.isFailure) {

                _uiState.update {
                    it.copy(

                        errorMessage = "Unable to load habit"
                    )
                }

                return@launch
            }

...
