...
            onDismissRequest = {
                showDeleteDialog = false
            },

            title = {
                Text(
                    text = "Delete habit?"
                )
            },

            text = {
                Text(
                    text = "This will permanently delete this habit and its associated data."
...
