...
    private fun login(){

        val email = _uiState.value.email
        val password = _uiState.value.password

        if (email.isBlank() || password.isBlank()) {
            _uiState.value = _uiState.value.copy(errorMessage = "Email and password cannot be empty")
            return
        }

        viewModelScope.launch {
            _uiState.value = _uiState.value.copy( errorMessage = null)
            _uiEvent.send(CommonUiEvent.ShowLoader)
...

                val user = result.getOrThrow()
                syncScheduler.scheduleInitialSync(user.id)

            }
            else{
                _uiState.value = _uiState.value.copy(errorMessage = "Login Failed")
                _uiEvent.send(CommonUiEvent.DoNothing)
            }
        }



...
